fix: using thredsafe set instead of copy